--- a/hobby.html
+++ b/hobby.html
@@ -45,13 +45,32 @@
             </div>
         </div>
     </nav>
+    <div class="container-fluid mt-3">
+        <div>
+            <h1 class="text-center">HOJA DE VIDA</h1>
+            <img class="personalimg mx-auto d-block m-3" src="imgs/ar.jpg" alt="imagen Andres Rivera">
+            <h1 class="text-center">Pasatiempo</h1>
+            <div class="card mx-auto mb-3" style="width: 30rem;">
 
-
-
-
-
-
-
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item ">
+                        <h5>Jugar League of legends en mis tiempos libres</h5>
+                    </li>
+                    <li class="list-group-item">
+                        <h5>Hablar con amigos</h5>
+                    </li>
+                    <li class="list-group-item">
+                        <h5>Pensar</h5>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="card mb-3 mx-auto">
+            <div class="card-body">
+                Programador
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
