--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,32 @@
             </div>
         </div>
     </nav>
+    <div class="container-fluid mt-3">
+        <div>
+            <h1 class="text-center">HOJA DE VIDA</h1>
+            <img class="personalimg mx-auto d-block m-3" src="imgs/ar.jpg" alt="imagen Andres Rivera">
+            <h1 class="text-center">Contacto</h1>
+            <div class="card mx-auto mb-3" style="width: 25rem;">
+
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item ">
+                        <h5>3235056137</h5>
+                    </li>
+                    <li class="list-group-item">
+                        <h5>rivera.andres6@gmail.com</h5>
+                    </li>
+                    <li class="list-group-item tex">
+                        <h5>rivera.andres@unividafup.edu.co</h5>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="card mb-3 mx-auto">
+            <div class="card-body">
+                Programador
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
