--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
   <title>Andres Rivera</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-    crossorigin="anonymous"></script>
+
+  <link href="css/style.css" rel="stylesheet">
 
 </head>
 
-<body class="bodyback">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body>
+  <nav class="navbar navbar-expand-lg ">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
-        <img src="" width="40" height="40" class="d-inline-block align-top" alt="">
+        <img src="imgs/logofast.png" class="logof d-inline-block align-top" alt="">
         Andres Rivera
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -46,6 +45,79 @@
       </div>
     </div>
   </nav>
+  <div class="container d-inline-flex ">
+    <img class="personalimg mx-auto m-3" src="imgs/ar.jpg" alt="imagen Andres Rivera">
+    <h1 class="d-flex align-items-center mx-auto m-3">HOJA DE VIDA</h1>
+  </div>
+  <div class="container-fluid mb-3 ">
+
+    <div class="row mt-3">
+      <div class="col-lg-3 mt-3 text-center">
+        <div class="h5 mb-2">DATOS PERSONALES</div>
+        <div class="card mb-2 p-1">
+          <div class="h6">Jesus Ricardo Andres Rivera Muñoz</div>
+        </div>
+        <div class="card mb-2 p-1">
+          <div class="h6">1996/04/17</div>
+        </div>
+        <div class="card mb-2 p-1">
+          <div class="h6">
+            1063815674
+          </div>
+        </div>
+        <div class="card mb-3 p-1">
+          <div class="h6">
+            rivera.andres6@gmail.com
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 mt-3 text-center">
+        <div class="h5 mb-2">PASATIEMPO</div>
+        <div class="card mb-2 p-1">
+          <div class="h6">Jugar League of legends en mis tiempos libres</div>
+        </div>
+        <div class="card mb-2 p-1">
+          <div class="h6">Hablar con amigos</div>
+        </div>
+        <div class="card mb-2 p-1">
+          <div class="h6">
+            Pensar
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 mt-3 text-center">
+        <div class="h5 mb-2">PASATIEMPO</div>
+        <div class="card mb-2 p-1">
+          <div class="h6">Primaria Colegio San Antonio De Padua</div>
+        </div>
+        <div class="card mb-2 p-1">
+          <div class="h6">Secundaria Codespa</div>
+        </div>
+        <div class="card mb-2 p-1">
+          <div class="h6">
+            Fundacion Universitaria de Popayan - Ing-Sistemas
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 mt-3 text-center">
+        <div class="h5 mb-2">CONTACTO</div>
+        <div class="card mb-2 p-1">
+          <div class="h6">3235056137</div>
+        </div>
+        <div class="card mb-2 p-1">
+          <div class="h6">rivera.andres6@gmail.com</div>
+        </div>
+        <div class="card mb-2 p-1">
+          <div class="h6">
+            rivera.andres@unividafup.edu.co
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
