--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
   <link href="css/style.css" rel="stylesheet">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -47,7 +49,7 @@
   </nav>
   <div class="container d-inline-flex ">
     <img class="personalimg mx-auto m-3" src="imgs/ar.jpg" alt="imagen Andres Rivera">
-    <h1 class="d-flex align-items-center mx-auto m-3">HOJA DE VIDA</h1>
+    <h1 class="d-flex align-items-center mx-auto m-3 h1">HOJA DE VIDA</h1>
   </div>
   <div class="container-fluid mb-3 ">
 
